# MySQL-WEB

./: Dockerfile  README.md  main.py  prvniProject.yaml  pyproject.toml
prvniProject/: main.py
templates/: index.html
tests/: test_main.py
